Added Trackers for total distance and methods to sum totals on gamification screen.

--- a/app/src/main/res/layout/fragment_gamification.xml
+++ b/app/src/main/res/layout/fragment_gamification.xml
@@ -53,12 +53,125 @@
             android:layout_height="match_parent">
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/card_MoreInfo"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                app:cardBackgroundColor="#FFFFFF"
+                app:cardCornerRadius="16dp"
+                app:cardElevation="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cardRecent_sus">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/distanceLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:id="@+id/imageDistance_walk"
+                        android:layout_width="44dp"
+                        android:layout_height="44dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:src="@drawable/walk"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:id="@+id/imageDistance_bus"
+                        android:layout_width="44dp"
+                        android:layout_height="44dp"
+                        android:layout_marginEnd="8dp"
+                        android:src="@drawable/bus"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/textDistanceTraveled_bus"
+                        app:layout_constraintTop_toBottomOf="@+id/imageDistance_car" />
+
+                    <ImageView
+                        android:id="@+id/imageDistance_car"
+                        android:layout_width="44dp"
+                        android:layout_height="44dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:src="@drawable/car"
+                        app:layout_constraintEnd_toStartOf="@+id/textDistanceTraveled_car"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:id="@+id/imageDistance_bike"
+                        android:layout_width="44dp"
+                        android:layout_height="44dp"
+                        android:layout_marginStart="8dp"
+                        android:src="@drawable/bike"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/imageDistance_walk" />
+
+                    <TextView
+                        android:id="@+id/textDistanceTraveled_walk"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:text="24 Km"
+                        android:textColor="#606060"
+                        android:textSize="24sp"
+                        app:layout_constraintBottom_toBottomOf="@+id/imageDistance_walk"
+                        app:layout_constraintStart_toEndOf="@+id/imageDistance_walk"
+                        app:layout_constraintTop_toTopOf="@+id/imageDistance_walk" />
+
+                    <TextView
+                        android:id="@+id/textDistanceTraveled_bike"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:text="24 Km"
+                        android:textColor="#606060"
+                        android:textSize="24sp"
+                        app:layout_constraintBottom_toBottomOf="@+id/imageDistance_bike"
+                        app:layout_constraintStart_toEndOf="@+id/imageDistance_bike"
+                        app:layout_constraintTop_toTopOf="@+id/imageDistance_bike" />
+
+                    <TextView
+                        android:id="@+id/textDistanceTraveled_car"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:text="24 Km"
+                        android:textColor="#606060"
+                        android:textSize="24sp"
+                        app:layout_constraintBottom_toBottomOf="@+id/imageDistance_car"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="@+id/imageDistance_car" />
+
+                    <TextView
+                        android:id="@+id/textDistanceTraveled_bus"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:text="24 Km"
+                        android:textColor="#606060"
+                        android:textSize="24sp"
+                        app:layout_constraintBottom_toBottomOf="@+id/imageDistance_bus"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="@+id/imageDistance_bus" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
                 android:id="@+id/cardRecent_TotalDist"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="8dp"
+                app:cardBackgroundColor="#FFFFFF"
                 app:cardCornerRadius="16dp"
                 app:cardElevation="0dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -70,18 +183,33 @@
                     android:layout_height="match_parent">
 
 
+                    <ImageView
+                        android:id="@+id/imageView4"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="4dp"
+                        android:layout_marginBottom="4dp"
+                        android:src="@drawable/route_between_icon"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:tint="@color/main_blue" />
+
                     <TextView
-                        android:id="@+id/textViewDistance"
+                        android:id="@+id/textViewDistance_total"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp"
                         android:text="You have traveled a total of &quot;X&quot; Km"
                         android:textAlignment="textStart"
                         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+
                         android:textColor="#000000"
                         app:layout_constraintBottom_toBottomOf="parent"
-
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/imageView4"
                         app:layout_constraintTop_toTopOf="parent" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
@@ -106,6 +234,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
+                app:cardBackgroundColor="#FFFFFF"
                 app:cardCornerRadius="16dp"
                 app:cardElevation="0dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -152,6 +281,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
+                app:cardBackgroundColor="#FFFFFF"
                 app:cardCornerRadius="16dp"
                 app:cardElevation="0dp"
                 app:layout_constraintEnd_toStartOf="@+id/cardRecent_Health"
@@ -234,6 +364,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
+                app:cardBackgroundColor="#FFFFFF"
                 app:cardCornerRadius="16dp"
                 app:cardElevation="0dp"
                 app:layout_constraintBottom_toTopOf="@+id/cardTotal_Visit"
@@ -296,6 +427,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
+                app:cardBackgroundColor="#FFFFFF"
                 app:cardCornerRadius="16dp"
                 app:cardElevation="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
