--- a/app/src/main/res/layout/journey_entry.xml
+++ b/app/src/main/res/layout/journey_entry.xml
@@ -109,10 +109,10 @@
                         android:id="@+id/transport_button_compleat"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="16dp"
+                        android:layout_marginEnd="8dp"
                         android:text="Complete"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/transport_button_rate"
                         app:layout_constraintStart_toEndOf="@+id/transport_button_download"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -121,11 +121,23 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-                        android:layout_marginEnd="16dp"
-                        android:text="Download GPX"
+                        android:layout_marginEnd="8dp"
+                        android:text="Download"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/transport_button_compleat"
                         app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:visibility="visible" />
+
+                    <Button
+                        android:id="@+id/transport_button_rate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="16dp"
+                        android:text="Rate"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/transport_button_compleat"
                         app:layout_constraintTop_toTopOf="parent"
                         tools:visibility="visible" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
