--- a/app/src/main/res/layout/ranger_splash.xml
+++ b/app/src/main/res/layout/ranger_splash.xml
@@ -55,15 +55,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/welcome_text" />
 
-    <TextView
-        android:id="@+id/welcome_tap"
+    <Button
+        android:id="@+id/splashOpen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="32dp"
-        android:text="Tap anywhere to continue"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:insetLeft="16dp"
+        android:insetRight="16dp"
+        android:text="Open"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/welcome_text_exp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
