--- a/app/src/main/res/layout/fragment_gamification.xml
+++ b/app/src/main/res/layout/fragment_gamification.xml
@@ -40,6 +40,7 @@
         android:layout_width="0dp"
         android:layout_height="300dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         app:cardBackgroundColor="#CAE14D"
         app:cardCornerRadius="16dp"
@@ -71,7 +72,8 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/distanceLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    tools:visibility="gone">
 
                     <ImageView
                         android:id="@+id/imageDistance_walk"
@@ -162,10 +164,145 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="@+id/imageDistance_bus" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/coSaveLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:visibility="gone"
+                    tools:visibility="visible">
+
+                    <ImageView
+                        android:id="@+id/imageDistance_walk2"
+                        android:layout_width="44dp"
+                        android:layout_height="44dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:src="@drawable/walk"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:id="@+id/imageDistance_bus2"
+                        android:layout_width="44dp"
+                        android:layout_height="44dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:src="@drawable/bus"
+                        app:layout_constraintEnd_toStartOf="@+id/textCoSaved_bus"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+
+                    <ImageView
+                        android:id="@+id/imageDistance_bike2"
+                        android:layout_width="44dp"
+                        android:layout_height="44dp"
+                        android:layout_marginStart="128dp"
+                        android:src="@drawable/bike"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/textCoSaved_bike"
+                        app:layout_constraintHorizontal_bias="1.0"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/imageDistance_walk2" />
+
+                    <TextView
+                        android:id="@+id/textCoSaved_walk"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:text="24 Km"
+                        android:textColor="#606060"
+                        android:textSize="24sp"
+                        app:layout_constraintBottom_toBottomOf="@+id/imageDistance_walk2"
+                        app:layout_constraintStart_toEndOf="@+id/imageDistance_walk2"
+                        app:layout_constraintTop_toTopOf="@+id/imageDistance_walk2" />
+
+                    <TextView
+                        android:id="@+id/textCoSaved_bike"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="128dp"
+                        android:text="24 Km"
+                        android:textColor="#606060"
+                        android:textSize="24sp"
+                        app:layout_constraintBottom_toBottomOf="@+id/imageDistance_bike2"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/imageDistance_bike2"
+                        app:layout_constraintTop_toTopOf="@+id/imageDistance_bike2" />
+
+
+                    <TextView
+                        android:id="@+id/textCoSaved_bus"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:text="24 Km"
+                        android:textColor="#606060"
+                        android:textSize="24sp"
+                        app:layout_constraintBottom_toBottomOf="@+id/imageDistance_bus2"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="@+id/imageDistance_bus2" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/healthLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:visibility="gone">
+
+                    <ImageView
+                        android:id="@+id/imageDistance_walk3"
+                        android:layout_width="44dp"
+                        android:layout_height="44dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:src="@drawable/walk"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+
+                    <ImageView
+                        android:id="@+id/imageDistance_bike3"
+                        android:layout_width="44dp"
+                        android:layout_height="44dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:src="@drawable/bike"
+                        app:layout_constraintEnd_toStartOf="@+id/textHealth_bike"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/textHealth_walk"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:text="24 Km"
+                        android:textColor="#606060"
+                        android:textSize="24sp"
+                        app:layout_constraintBottom_toBottomOf="@+id/imageDistance_walk3"
+                        app:layout_constraintStart_toEndOf="@+id/imageDistance_walk3"
+                        app:layout_constraintTop_toTopOf="@+id/imageDistance_walk3" />
+
+                    <TextView
+                        android:id="@+id/textHealth_bike"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:text="24 Km"
+                        android:textColor="#606060"
+                        android:textSize="24sp"
+                        app:layout_constraintBottom_toBottomOf="@+id/imageDistance_bike3"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="@+id/imageDistance_bike3" />
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/cardRecent_TotalDist"
+                android:id="@+id/card_TotalDist"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -239,7 +376,7 @@
                 app:cardElevation="0dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/cardRecent_sus"
-                app:layout_constraintTop_toBottomOf="@+id/cardRecent_TotalDist">
+                app:layout_constraintTop_toBottomOf="@+id/card_TotalDist">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -259,7 +396,7 @@
                         app:srcCompat="@drawable/health_icon" />
 
                     <TextView
-                        android:id="@+id/textViewHealth"
+                        android:id="@+id/totalHealth"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
@@ -286,7 +423,7 @@
                 app:cardElevation="0dp"
                 app:layout_constraintEnd_toStartOf="@+id/cardRecent_Health"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cardRecent_TotalDist">
+                app:layout_constraintTop_toBottomOf="@+id/card_TotalDist">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -305,7 +442,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
-                        android:id="@+id/textView6"
+                        android:id="@+id/totalCo2Save"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
@@ -329,11 +466,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         app:cardBackgroundColor="#B4E8FF"
         app:cardCornerRadius="16dp"
         app:cardElevation="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/SustainableCard">
