Cleaning up UI and adding warnings about walking

--- a/app/src/main/res/layout/fragment_favorates.xml
+++ b/app/src/main/res/layout/fragment_favorates.xml
@@ -7,12 +7,28 @@
     android:layout_height="match_parent"
     tools:context=".ui.FavoratesFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/favorate_recycler"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Favorates"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#499CA2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/favorate_recycler"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 </androidx.constraintlayout.widget.ConstraintLayout>
