--- a/app/src/main/res/layout/fragment_gamification.xml
+++ b/app/src/main/res/layout/fragment_gamification.xml
@@ -12,7 +12,7 @@
         android:id="@+id/background_vista3"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:alpha="0.9"
+        android:alpha="0.8"
         android:background="#000000"
         android:cropToPadding="false"
         android:scaleType="fitXY"
@@ -26,8 +26,7 @@
         android:id="@+id/achivments_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Achivements"
+        android:text="Log Book"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="#499CA2"
         android:textStyle="bold"
@@ -40,7 +39,7 @@
         android:layout_width="0dp"
         android:layout_height="300dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         app:cardBackgroundColor="#CAE14D"
         app:cardCornerRadius="16dp"
@@ -466,7 +465,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         app:cardBackgroundColor="#B4E8FF"
         app:cardCornerRadius="16dp"
