--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -18,6 +18,11 @@
 
     <item
         android:id="@+id/gamificationFragment"
-        android:icon="@drawable/trophyicon"
-        android:title="Achievements" />
+        android:icon="@drawable/logbook2"
+        android:title="Log Book" />
+
+    <item
+        android:id="@+id/surveyFragment"
+        android:icon="@drawable/survey"
+        android:title="Survey" />
 </menu>
