Cleaning up methods to request permisons.

--- a/app/src/main/res/layout/ranger_splash.xml
+++ b/app/src/main/res/layout/ranger_splash.xml
@@ -36,6 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Welcome"
+        android:textColor="#535353"
         android:textSize="48sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,6 +51,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:text="This is a route planning app in the Lake District. It has not been designed for navigation. You can use Open Street Maps, Google Maps or other navigation apps."
+        android:textColor="#535353"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,6 +65,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:text="Walking and Cycling can be dangerous, and LDRP gives no guaranty of the accuracy or conditions of the routes presented in the app. Users should ensure that routes they plan on using are within their capabilities and accept personal responsibility for their own safety. LDRP recommender users carry backup means of navigation such as a map and compass."
+        android:textColor="#535353"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
