--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -48,4 +48,9 @@
         <item>Plane</item>
     </string-array>
 
+    <string-array name="radio_useLocation">
+        <item>No</item>
+        <item>Yes</item>
+    </string-array>
+
 </resources>
